# EcoStream-Dispatch-Pathway

./: .gitignore  Dashboard.jsx  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: README.md  docstore_service.py  pyproject.toml  rag_service.py
backend/app/: connectors.py  license.py  observers.py  pipeline.py  server.py  state.py
backend/manuals/: low_soc.txt  motor_overheat.txt
src/: App.jsx  Dashboard.jsx  index.css  main.jsx
src/api/: ecostream.js
src/components/: AuthModal.jsx  TopNav.jsx
src/data/: fleet.js
src/hooks/: useLiveBackend.js  useLocalStorage.js
src/layout/: AppShell.jsx
src/pages/: Alerts.jsx  Dashboard.jsx  Fleet.jsx  Landing.jsx  NotFound.jsx  Settings.jsx
src/routes/: AppRoutes.jsx  RequireAuth.jsx
src/services/: localAuth.js
